--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "swiper": "^9.0.0",
+    "up_locations": "file:",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
